[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version", "description", "readme", "classifiers", "authors", "license", "requires-python"]
name = "blueskysocial"


dependencies = [
    "requests","BeautifulSoup4","pillow==11.2.1","opencv-python==4.11.0.86"
]
[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "pre-commit",
    "pylint",
    "joblib "
]

[tool.setuptools_scm]