[metadata]
name = blueskysocial
author = Dmitry Mogilevsky
author_email = dmitry.mogilevsky@gmail.com
description = API for BlueSky social network
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dmoggles/blueskysocial
license = MIT

classifiers = Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
python_requires = >=3.6

install_requires =
    requests

[options.extras_require]
dev =
    pytest
    black
    pre-commit
    pylint
    joblib

[options.packages.find]
exclude = tests*

[flake8]
max-line-length = 88
extend-ignore = E203

[tool:pytest]
addopts = -v -s
testpaths =
    tests
